# world-builder

./: .gitignore  AGENTS.md  Makefile  README.md  run_tests.py
creator/: README.md  pyproject.toml  run.py  run.sh  run_tests.py  setup.sh  world.yaml  world_with_descriptions.yaml
creator/.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
creator/output/: world_with_descriptions.yaml  world_with_names.yaml  world_with_names_raw.yaml
creator/src/: continent_creator.py  continents.yaml  create_world.py  text_to_image.py  utils.py  world.json  world.yaml  world_creator.py  world_desc.txt
creator/src/creator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
creator/src/data/: elysian_skies.txt  elysian_world.txt  error_message.txt  output.txt
creator/src/prompts/: create_continents.txt  create_world.txt  validate_continents.txt
creator/src/sandbox/: cli.py  continent_creator.py  full_graph.py  image_generator.py  image_to_image.py  langgraph_cities_environments_creator.py  langgraph_continents_oceans.py  langgraph_world_creator.py  lg_cli.py  region_graph.py  spacy_extractor.py  test_utils.py  text_to_image.py  utils.py  world_creator.py  world_graph.py
creator/src/sandbox/prompts/: create_continents.txt  create_world_narrative.txt
creator/src/tests/: test_description_creator_graph.py  test_utils.py
creator/src/world_data/: continents.yaml  oceans.yaml  world.yaml
creator/src/worldbuilder/: __init__.py  cli.py  description_creator_graph.py  full_graph.py  image_generator.py  image_generator_graph.py  langgraph_continents_oceans.py  langgraph_world_creator.py  name_chopper.py  name_creator_graph.py  package_world.py  paths.py  pipeline_loader.py  prompt_loader.py  region_graph.py  spacy_extractor.py  utils.py  world_creator.py  world_graph.py
creator/src/worldbuilder/prompts/: create_image_prompt.txt  create_world.txt  describe_city.txt  describe_continent.txt  describe_ocean.txt  describe_region.txt  describe_world.txt  extract_names.txt  generate_city_names.txt  generate_continent_names.txt  generate_environments.txt  (+4 more)
creator/world_data/: continents.yaml  continents_population.yaml  countries.yaml  world.yaml
creator/worlds/: worlds.json
creator/worlds/aethoria_prime/: world.yaml
creator/worlds/elyndorinthalis/: world.yaml
creator/worlds/nyxoria-iv/: world.yaml
creator/worlds/nyxoria_primevalis/: world.yaml
(+48 files in other folders)
